Fix database connection settings
	modified:   .env
	modified:   .gitignore
	modified:   docker-compose.yml

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MYSQL_HOST=myproject-mysql
-MYSQL_DATABASE=
+MYSQL_DATABASE=myproject-db
 MYSQL_USERNAME=root
-MYSQL_PASSWORD=
+MYSQL_PASSWORD=mypassword
